--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "install": "^0.13.0",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "npm": "^11.2.0"
   }
